Add profile login, battles etc
